feat: added new page & removed build folder

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://abhinavshm95.github.io/photo-portfolio",
+  "homepage": "https://abhinavshm95.github.io",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@testing-library/jest-dom": "^5.11.9",
@@ -12,7 +12,12 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-image-lightbox": "^5.1.1",
+    "react-images": "^1.2.0-beta.6",
     "react-parallax": "^3.2.1",
+    "react-photo-gallery": "^8.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.1",
     "react-slick": "^0.28.0",
     "slick-carousel": "^1.8.1",
