--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-image-lightbox": "^5.1.1",
-    "react-images": "^1.2.0-beta.6",
+    "react-images": "^1.0.0",
     "react-parallax": "^3.2.1",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
