--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.1",
     "react-image-lightbox": "^5.1.1",
     "react-images": "^1.0.0",
+    "react-lazyload": "^3.2.0",
     "react-parallax": "^3.2.1",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
