--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "homepage": "https://abhinavshm95.github.io/photo-portfolio",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@react-google-maps/api": "^2.2.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "google-map-react": "^2.1.9",
+    "jquery": "^3.6.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
@@ -17,6 +21,7 @@
     "react-lazyload": "^3.2.0",
     "react-parallax": "^3.2.1",
     "react-photo-gallery": "^8.0.0",
+    "react-pure-render": "^1.0.2",
     "react-router-dom": "^5.2.0",
     "react-router-transition": "^2.1.0",
     "react-scripts": "4.0.1",
